<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="netgenes.conversionapplication.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert_from_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginRight="20dp"
        android:id="@+id/textView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:id="@+id/amount_text_view"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="1.0"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/unit_type_spinner"
        android:layout_below="@+id/amount_text_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/unit_type_spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:columnCount="2"
        android:rowCount="6"
        android:orientation="horizontal"
        android:padding="15dp"
        android:background="#ffdae6ff">

        <TextView
            android:id="@+id/tsp_text_view"
            android:text="@string/default_teaspoon_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/cup_text_view"
            android:text="@string/default_cup_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="left|top"/>

        <TextView
            android:id="@+id/tbs_text_view"
            android:text="@string/default_tablespoon_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/oz_text_view"
            android:text="@string/default_ounce_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="left|top"/>

        <TextView
            android:id="@+id/kg_text_view"
            android:text="@string/default_kilogram_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/quart_text_view"
            android:text="@string/default_quart_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="left|top"/>

        <TextView
            android:id="@+id/gal_text_view"
            android:text="@string/default_gallon_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/pound_text_view"
            android:text="@string/default_pound_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="left|top"/>

        <TextView
            android:id="@+id/ml_text_view"
            android:text="@string/default_milliliter_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/liter_text_view"
            android:text="@string/default_liter_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="left|top"/>

        <TextView
            android:id="@+id/mg_text_view"
            android:text="@string/default_milligram_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/pint_text_view"
            android:text="@string/default_pint_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="left|top"/>

    </GridLayout>
</RelativeLayout>
